# SQLAlchemy_Project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Project_DummyDataTest/: readme.md
Project_DummyDataTest/MySQL/DDL/: airport-ddl.sql
Project_DummyDataTest/src/: table_modifier.py
Project_DummyDataTest/src/dummy_generator/: airline_generator.py  airplane_type_generator.py  airport_reachable_generator.py  booking_generator.py  (+4 more)
config/: DatabaseInfo.py  GoogleAPIKey.json  database_engines.py  database_info_class.py  database_utils.py  db.py  db_info.py  flask_sqlalchemy_init.py
controller/: api_controller.py  homepage_controller.py  oauth_controller.py
models/: AirlineModel.py  AirplaneModel.py  AirplaneTypeModel.py  AirportGeoModel.py  AirportModel.py  AirportReachableModel.py  BookingModel.py  EmployeeModel.py  FlightLogModel.py  FlightModel.py  FlightScheduleModel.py  Passenger.py  PassengerDetailsModel.py  UserModel.py  WeatherDataModel.py  __init__.py  airport-ddl.sql
src/: app.py  main.py
src/config/: db.py  db_info.py
src/dummy_generator/: airplane_generator.py  airport_generator.py  airport_geo_generator.py  flight_generator.py  passenger_generator.py  passengerdetails_generator.py
src/ui/: user_interface.py
src/util/: database_utils.py  dummy_generators.py  utils.py
src/version2/: create_all_dummy.py
templates/: base.html  homepage.html  index.html  post_all.html  post_table.html
ui/: user_interface.py
util/: CustomJSONEncoder.py  database_utils.py  dummy_generators.py  utils.py
util/error/: error_handler.py
