[tool.poetry]
name = "SQLAlchemy-project"
version = "0.1.0"
description = ""
authors = ["Sullung <sullung2yo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
aniso8601 = "9.0.1"
attrs = "23.2.0"
blinker = "1.8.2"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.7"
faker = "25.2.0"
faker-airtravel = "0.4"
flask = "3.0.3"
flask-login = "0.6.3"
flask-migrate = "4.0.7"
flask-restful = "0.3.10"
flask-restx = "1.3.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
idna = "3.7"
importlib-resources = "6.4.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
mako = "1.3.5"
markupsafe = "2.1.5"
pycparser = "2.22"
pymysql = "1.1.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
referencing = "0.35.1"
requests = "2.32.2"
rpds-py = "0.18.1"
six = "1.16.0"
sqlalchemy = "2.0.30"
typing-extensions = "4.11.0"
urllib3 = "2.2.1"
werkzeug = "3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
